# Eindopdracht

./: Eindopdracht.ipynb  arduino_device.py  diode_experiment.py  zc_experiment.py
eindopdracht/: 3.csv  pyproject.toml  test.csv  test2.csv
eindopdracht/src/eindopdracht/: Eindopdracht.ipynb  Eindopdracht_structuur.ui  arduino_device.py  design.py  eind.py  pythondaq_gui.py  zc_experiment.py
