[tool.poetry]
name = "eindopdracht"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "eindopdracht", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
nsp2visasim = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.compile]
shell = """
pyside6-uic src/eindopdracht/Eindopdracht_structuur.ui -o src/eindopdracht/design.py
"""