[tool.poetry]
name = "eindopdracht"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "eindopdracht", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
nsp2visasim = "^1.3.1"
pandas = "^1.5.2"
numpy = "^1.23.5"
pyside6 = "^6.4.1"
pyqtgraph = "^0.13.1"
pyvisa = "^1.12.0"
pyvisa-py = "^0.5.3"
lmfit = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.compile]
shell = """
pyside6-uic src/eindopdracht/Eindopdracht_structuur.ui -o src/eindopdracht/design.py
"""

[tool.poetry.scripts]
run_eind = "eindopdracht.eind:main"